fixing .modal z-index to 3000

--- a/src/styles.css
+++ b/src/styles.css
@@ -134,7 +134,7 @@ filter:blur(1px);transform:scale(.9);
   display: none;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  z-index: 3000;
   padding: 40px;
   animation: fadeInModal 0.4s ease;
 }
